--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,16 @@
 ---
 ---
 
+@article{feng2023musclevae,
+  title={MuscleVAE: Model-Based Controllers of Muscle-Actuated Characters},
+  author={Feng, Yusen and Xu, Xiyan and Liu, Libin},
+  journal={ACM SIGGRAPH Asia Conference Track},
+  volume={41},
+  number={6},
+  pages={1--16},
+  year={2023},
+  selected={true},
+  publisher={ACM New York, NY, USA},
+  preview={MuscleVAE.png}
+}
+
