--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,6 @@
   pages={1--16},
   year={2023},
   selected={true},
-  publisher={ACM New York, NY, USA},
-  preview={MuscleVAE.png}
+  publisher={ACM New York, NY, USA}
 }
 
