--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,11 @@
 ---
 ---
 
-@article{feng2023musclevae,
+@inproceedings{feng2023musclevae,
   title={MuscleVAE: Model-Based Controllers of Muscle-Actuated Characters},
   author={Feng, Yusen and Xu, Xiyan and Liu, Libin},
-  journal={ACM SIGGRAPH Asia Conference Track},
-  volume={41},
-  number={6},
-  pages={1--16},
+  booktitle={SIGGRAPH Asia 2023 Conference Papers},
+  pages={1--11},
   year={2023},
-  selected={true},
-  publisher={ACM New York, NY, USA}
+  selected={true}
 }
-
